--- a/Html/Admission/admission.html
+++ b/Html/Admission/admission.html
@@ -10,6 +10,7 @@
     <title> U-tech | Admission Information</title>
     <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/homenew.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 
 </head>
 
