--- a/Html/Courses/electronic.html
+++ b/Html/Courses/electronic.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/homenew.css">
     <link rel="stylesheet" href="../../css/scolorship.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 
 </head>
 
