--- a/Html/evaluation system/evaluation.html
+++ b/Html/evaluation system/evaluation.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../evaluation system/css/evaluation.css">
     <link rel="stylesheet" href="../../css/homenew.css">
     <link rel="stylesheet" href="../../css/all.min.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
     <title>U-tech | Evaluation System</title>
 </head>
 
