--- a/Html/gallery/gallery.html
+++ b/Html/gallery/gallery.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../gallery/CSS/lightbox.min.css">
     <link rel="stylesheet" href="../../css/homenew.css">
     <link rel="stylesheet" href="../../css/all.min.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 </head>
 
 <body>
