--- a/Html/online form/form.html
+++ b/Html/online form/form.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../online form/css/form.css">
     <link rel="stylesheet" href="../../css/homenew.css">
     <link rel="stylesheet" href="../../css/all.min.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 
 </head>
 
