--- a/Html/our colledge/college.html
+++ b/Html/our colledge/college.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/svg" href="../../img/icon.png" sizes="16*16">
     <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/homenew.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 
 </head>
 
