--- a/Html/research/research.html
+++ b/Html/research/research.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../research/css/research.css">
     <link rel="stylesheet" href="../../css/all.min.css">
     <link rel="stylesheet" href="../../css/homenew.css">
+      <link rel="stylesheet" href="../../css/mediaquery.css">
 </head>
 
 <body>
