--- a/Html/gallery/gallery.html
+++ b/Html/gallery/gallery.html
@@ -119,7 +119,7 @@
             <span class="headpt1">Image</span> &#160<span class="headpt2">Gallery</span>
         </h1><br>
         <div class="gallery">
-            <a href="../gallery/Pictures/2.jpg" data-lightbox="Gallery"> <img src="../gallery/Pictures/2.jpg" alt="U-Tec"> </a>
+            <a href="../gallery/Pictures/2.jpg" > <img src="../gallery/Pictures/2.jpg" alt="U-Tec"> </a>
 
             <a href="../gallery/Pictures/42.jpg" data-lightbox="Gallery"> <img src="../gallery/Pictures/42.jpg" alt="U-Tec"> </a>
 
