--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
             </div>
         </div>
         <div class="footer-text">
-            www.unitedtechnicalcollege.com.np copyright&copy; 2020/2021 all rights reserved, designed by <a href="https://github.com/Hunter109" target="_blank"> Hunter//Ghyampey.</a>
+            www.unitedtechnicalcollege.com.np copyright&copy; 2020/2021 all rights reserved, designed by <a href="https://github.com/Hunter109" target="_blank"> Hunter</a>
         </div>
 
     </footer>
